# taproot

./: Cargo.toml  PATCHES.md  flake.nix
.cargo/: config.toml
c-gull/: Cargo.toml
c-gull/src/: lib.rs  nss.rs  resolve.rs  termios_.rs  time.rs
c-scape/: Cargo.toml
c-scape/src/: arpa_inet.rs  base64.rs  dl.rs  errno_.rs  glibc_extras.rs  jmp.rs  lib.rs  mkostemps.rs  posix_spawn.rs  process_.rs  rand48.rs  stdio.rs  sync_cell.rs  syscall.rs  syslog.rs  todo.rs  va.rs
c-scape/src/ctype/lsb_abi/: ctype_b_loc.rs  ctype_tolower_loc.rs  ctype_toupper_loc.rs
c-scape/src/env/: set.rs
c-scape/src/fs/: fcntl.rs  mknod.rs  open.rs  stat.rs  statvfs.rs
c-scape/src/fs/dir/: readdir.rs
c-scape/src/io/: mod.rs  poll.rs
c-scape/src/malloc/: mod.rs
c-scape/src/mem/: chk.rs  ntbs.rs
c-scape/src/mm/: mod.rs
c-scape/src/net/: mod.rs
c-scape/src/printf_impl/: mod.rs  output.rs  parser.rs
c-scape/src/process/: exec.rs  gid.rs  groups.rs  mod.rs  uid.rs
c-scape/src/shm/: mod.rs
c-scape/src/stdio/: chk.rs
c-scape/src/termios_/: mod.rs
c-scape/src/thread/: key.rs  mod.rs  mutex.rs  sem.rs
c-scape/src/time/: mod.rs
c-scape/src/todo/: dl.rs  jmp.rs  pthread_cancel.rs  sysv.rs
example-crates/mem-stress/: Cargo.toml
example-crates/mem-stress/src/: main.rs
eyra/: Cargo.toml
eyra/src/: lib.rs
origin/: .cargo_vcs_info.json  Cargo.toml  build.rs
origin/src/: getauxval.rs  lib.rs  naked.rs  relocate.rs
origin/src/arch/: aarch64.rs  arm.rs  riscv64.rs  x86.rs  x86_64.rs
origin/src/mem/: x86_64.rs
origin/src/program/: linux_raw.rs
origin/src/thread/: linux_raw.rs
stub/: Cargo.toml  build.rs
stub/src/: lib.rs
taproot/: Cargo.toml  build.rs
taproot/.cargo/: config.toml
taproot/src/: barrier.rs  dl.rs  dso_init.rs  env.rs  gap.rs  lib.rs  scanf.rs
tools/: link-shim.sh
