[package]
name = "c-ward"
version = "0.22.3"
authors = [
    "Dan Gohman <dev@sunfishcode.online>",
]
description = "An implementation of libc written in Rust"
license = "Apache-2.0 WITH LLVM-exception OR Apache-2.0 OR MIT"
repository = "https://github.com/sunfishcode/c-ward"
edition = "2021"
exclude = ["/.github", "ci"]
publish = false

[dev-dependencies]
assert_cmd = "2.0.12"
libc = "0.2.155"

[workspace]
members = [
  "c-scape",
  "c-gull",
  "eyra",
  "origin",
  "taproot",
  "stub",
]

# the fork carries a dso-init entry point and a load-bias fix so a dlopen'd
# libc.so can create threads with the executable's tls layout
# The cdylib must export the whole libc surface. rustc links dependency
# rlibs without --whole-archive, so a #[no_mangle] entry whose codegen
# unit nothing referenced would be skipped by archive extraction and
# silently vanish from the .so's dynamic table (stable and nightly
# partition differently; stable 1.96 dropped 30 math/int symbols). One
# codegen unit per libc crate makes extraction all-or-nothing.
[profile.release.package.taproot-c-scape]
codegen-units = 1
[profile.release.package.taproot-c-gull]
codegen-units = 1
[profile.release.package.taproot-origin]
codegen-units = 1
