[package]
edition = "2024"
rust-version = "1.85"
name = "taproot-origin"
version = "0.26.5"
authors = ["Dan Gohman <dev@sunfishcode.online>"]
include = [
    "src",
    "build.rs",
    "Cargo.toml",
    "COPYRIGHT",
    "LICENSE*",
    "/*.md",
]
autolib = false
autobins = false
autoexamples = false
autotests = false
autobenches = false
description = "Program startup and thread support written in Rust (origin fork for the taproot libc: DSO self-init, cross-runtime thread tagging)"
documentation = "https://docs.rs/taproot-origin"
readme = "README.md"
keywords = ["linux"]
categories = ["no-std"]
license = "Apache-2.0 WITH LLVM-exception OR Apache-2.0 OR MIT"
repository = "https://github.com/carrot-wm/taproot"

[package.metadata.docs.rs]
features = [
    "origin-start",
    "signal",
    "program-at-exit",
    "thread-at-exit",
    "nightly",
]

[features]
alloc = [
    "rustix/alloc",
    "smallvec",
]
atomic-dbg-logger = [
    "atomic-dbg/log",
    "init-array",
]
default = [
    "std",
    "log",
    "libc",
    "errno",
    "signal",
    "init-fini-arrays",
    "program-at-exit",
    "thread-at-exit",
]
eh-personality = ["unwinding/personality"]
eh-personality-continue = ["unwinding?/personality-dummy"]
env_logger = [
    "dep:env_logger",
    "init-array",
]
experimental-relocate = [
    "rustix/mm",
    "rustix/runtime",
]
external-start = ["take-charge"]
fini-array = []
getauxval = ["rustix/param"]
init-array = []
init-fini-arrays = [
    "init-array",
    "fini-array",
]
max_level_off = ["log/max_level_off"]
nightly = ["unwinding"]
optimize_for_size = []
origin-start = ["take-charge"]
panic-handler = ["unwinding/panic-handler"]
panic-handler-trap = ["unwinding?/panic-handler-dummy"]
param = ["rustix/param"]
program-at-exit = ["alloc"]
rustc-dep-of-std = [
    "dep:core",
    "dep:alloc",
    "linux-raw-sys/rustc-dep-of-std",
    "bitflags/rustc-dep-of-std",
    "rustix/rustc-dep-of-std",
    "unwinding?/rustc-dep-of-std",
    "libc?/rustc-dep-of-std",
    "rustix-futex-sync/rustc-dep-of-std",
]
signal = ["rustix/runtime"]
std = [
    "rustix/std",
    "bitflags/std",
    "alloc",
]
take-charge = [
    "linux-raw-sys",
    "rustix/use-explicitly-provided-auxv",
    "rustix/runtime",
]
thread = [
    "rustix/thread",
    "rustix/mm",
    "param",
    "rustix/process",
    "rustix/runtime",
    "rustix-futex-sync",
]
thread-at-exit = [
    "alloc",
    "thread",
]
# a per-thread pointer slot for the libc layer's pthread specifics,
# next to errno: same pattern, same ownership story
thread-specifics = []
unstable-errno = ["thread"]

[lib]
name = "origin"
path = "src/lib.rs"

[dependencies.alloc]
version = "1.0.0"
optional = true
package = "rustc-std-workspace-alloc"

[dependencies.atomic-dbg]
version = "0.1.11"
optional = true
default-features = false

[dependencies.bitflags]
version = "2.4.0"
default-features = false

[dependencies.core]
version = "1.0.0"
optional = true
package = "rustc-std-workspace-core"

[dependencies.env_logger]
version = "0.11.0"
optional = true
default-features = false

[dependencies.errno]
version = "0.3.3"
optional = true
default-features = false

[dependencies.libc]
version = "0.2.149"
optional = true
default-features = false

[dependencies.linux-raw-sys]
version = "0.9.2"
features = [
    "general",
    "no_std",
    "elf",
]
optional = true
default-features = false

[dependencies.log]
version = "0.4.14"
optional = true
default-features = false

[dependencies.rustix]
version = "1.0.0"
default-features = false

[dependencies.rustix-futex-sync]
version = "0.4.0"
optional = true

[dependencies.smallvec]
version = "1.11.1"
features = ["const_new"]
optional = true

[dev-dependencies.assert_cmd]
version = "2.0.12"

[target.'cfg(not(target_arch = "arm"))'.dependencies.unwinding]
version = "0.2.6"
features = ["unwinder"]
optional = true
default-features = false

[target.'cfg(target_arch = "aarch64")'.dependencies.rustix]
version = "1.0.0"
features = ["param"]
default-features = false
