[package]
name = "taproot"
version = "0.1.0"
edition = "2021"
description = "A standalone pure-Rust libc.so.6: eyra's origin + c-gull built as a cdylib"
license = "Apache-2.0 WITH LLVM-exception OR Apache-2.0 OR MIT"
repository = "https://github.com/carrot-wm/taproot"

[lib]
name = "taproot"
crate-type = ["cdylib"]

[dependencies]
# eyra pulls origin (startup) + c-gull (libc), routed to the fork members
# todo: blob drivers import far more of the libc surface than they
# call; the stubs let RTLD_NOW succeed and name anything actually used
eyra = { package = "taproot-eyra", path = "../eyra", version = "0.22.3", features = ["todo"] }
# the dso ctor feeds this copy of origin/rustix the real auxv (features
# arrive through eyra's take-charge graph; fs covers the /proc read)
origin = { version = "0.26.2", default-features = false }
rustix = { version = "1.0", default-features = false, features = ["fs"] }
